# glmm

./: LICENSE  README.md  pyproject.toml  setup.py
data/processed/: defaults.csv  ratings.csv
data/raw/: Number_of_defaults.xlsx  Number_of_ratings.xlsx
examples/: run_ordered_binomial.py
glmm/: __init__.py
glmm/models/: __init__.py  base.py  ordered_binomial.py
glmm/utils/: __init__.py  math.py
notebooks/: eda.ipynb  implementation.ipynb
tests/: test_ordered_binomial.py
